readme and exclusions

--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
 | <a href="http://docs.julialang.org/en/release-0.4/">julia docs</a>
 | <a href="https://github.com/JuliaIO">julia IO</a>
 | <a href="https://en.wikibooks.org/wiki/Introducing_Julia">Julia on wikibooks</a>
-
-</p>
+and currently excluding <a href="https://github.com/JuliaLang"/">github issues</a>...</p>
 	<p id="footer"><a href="https://github.com/cormullion/">contact</a></p>
 
 </div>
