--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 | <a href="https://github.com/JuliaIO">julia IO</a>
 | <a href="https://en.wikibooks.org/wiki/Introducing_Julia">Julia on wikibooks</a>
 and currently excluding <a href="https://github.com/JuliaLang"/">github issues</a>...</p>
-	<p id="footer"><a href="https://github.com/cormullion/">contact</a></p>
+	<p id="footer"><a href="https://github.com/cormullion/julia-search/">contact</a></p>
 
 </div>
 
