--- a/index.html
+++ b/index.html
@@ -31,19 +31,20 @@
 
     <div id="foot">
     <p>Currently indexing:
-<a href="http://statsbasejl.readthedocs.org/en/latest/">statsbase</a>
+<a href="http://devdocs.io/julia/">devdocs.io/julia</a>
+| <a href="http://docs.julialang.org/en/latest/">official Julia docs (latest version)</a>
+| <a href="http://statsbasejl.readthedocs.org/en/latest/">statsbase</a>
 | <a href="https://learnxinyminutes.com/docs/julia/">learn Julia in Y minutes</a>
 | <a href="http://gadflyjl.org">gadfly.jl</a>
 | <a href="http://julialang.org">julialang.org</a>
 | <a href="http://www.juliabloggers.com">juliabloggers</a>
-| <a href="https://github.com/JuliaStats">juliastats</a>
-| <a href="https://github.com/JuliaLang">julia on github</a>
+| <a href="https://github.com/JuliaStats">JuliaStats</a>
+| <a href="https://github.com/JuliaLang">Julia on github</a>
 | <a href="http://pkg.julialang.org">pkg.julialang.org</a>
-| <a href="https://github.com/JuliaGraphics">juliagraphics on github</a>
-| <a href="http://docs.julialang.org/en/release-0.4/">julia docs</a>
-| <a href="https://github.com/JuliaIO">julia IO</a>
+| <a href="https://github.com/JuliaGraphics">JuliaGraphics on github</a>
+| <a href="https://github.com/JuliaIO">Julia IO</a>
 | <a href="https://en.wikibooks.org/wiki/Introducing_Julia">Julia on wikibooks</a>
-and currently excluding <a href="https://github.com/JuliaLang"/">github issues</a>...</p>
+but currently excluding <a href="https://github.com/JuliaLang"/">github issues</a>...</p>
 	<p id="footer"><a href="https://github.com/cormullion/julia-search/">contact</a></p>
 
 </div>
